Work around bizarre Safari filter/overflow CSS bug

--- a/src/components/datagrid/_data_grid_data_row.scss
+++ b/src/components/datagrid/_data_grid_data_row.scss
@@ -104,6 +104,12 @@
   max-width: 400px !important;
   max-height: 400px !important;
   z-index: $euiZDataGridCellPopover !important;
+  // Workaround for a Safari CSS bug when using both `overflow: auto` & `filter: drop-shadow`
+  // (see https://github.com/elastic/eui/issues/6151)
+  // Disables the default EuiPopover filter drop-shadow and uses box-shadow instead,
+  // since we don't use the popover arrow in any case for cell popovers
+  filter: none;
+  @include euiBottomShadow; // TODO: Convert to euiShadowMedium() in Emotion
 }
 
 .euiDataGridRowCell__expandFlex {
